@@ -1,3 +1,8 @@
+2010-03-13 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/gsc/GSContext.m (-GSDrawImage::): 
+	Bug fix by Anibal Rindisbacher <anibal784@gmail.com>
+
 2010-03-12 Doug Simons <doug.simons@testplant.com>
 
 	* Source/win32/WIN32Server.m: Capture the mouse to get mouse
